--- a/vercel/package.json
+++ b/vercel/package.json
@@ -2,10 +2,10 @@
   "name": "vercel",
   "version": "1.0.0",
   "description": "",
-  "main": "api/index.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon api/index.js"
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
